--- a/template/summary.html
+++ b/template/summary.html
@@ -1,5 +1,4 @@
-    <h2>{:summary.title}</h2>
-    <p>Link: {:summary.link}</p>
+    <a href="{:summary.link}"><h2>{:summary.title}</h2></a>
     <p>Summary: {:summary.summary}</p>
     <p>Author: {:summary.author}</p>
     <p>Create Time: {:summary.create_time}</p>
