--- a/template/header.html
+++ b/template/header.html
@@ -11,9 +11,45 @@
     <link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
     <title>Hello, world!</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <body class="mdui-theme-primary-blue-grey mdui-theme-accent-blue">
+      <div class="mdui-container">
+          <div class="mdui-row">
+              <div class="mdui-col-md-8 mdui-col-xs-12">
+                  <div class="mdui-card mdui-shadow-5">
+                      <div class="mdui-card-media">
+                          <img src="https://picsum.photos/800/300/?random" alt="">
+                          <div class="mdui-card-media-covered mdui-card-media-covered-gradient">
+                              <div class="mdui-card-primary">
+                                  <div class="mdui-card-primary-title">博客标题</div>
+                                  <div class="mdui-card-primary-subtitle">博客副标题</div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="mdui-card-content">博客内容</div>
+                      <div class="mdui-card-actions">
+                          <button class="mdui-btn mdui-btn-raised mdui-ripple">阅读全文</button>
+                      </div>
+                  </div>
+              </div>
+              <div class="mdui-col-md-4 mdui-col-xs-12">
+                  <div class="mdui-card mdui-shadow-5">
+                      <div class="mdui-card-header">
+                          <img src="https://picsum.photos/100/100/?random" alt="" class="mdui-card-header-avatar">
+                          <div class="mdui-card-header-title">作者名字</div>
+                          <div class="mdui-card-header-subtitle">作者简介</div>
+                      </div>
+                      <ul class="mdui-list">
+                          <li class="mdui-list-item mdui-ripple">分类1</li>
+                          <li class="mdui-list-item mdui-ripple">分类2</li>
+                          <li class="mdui-list-item mdui-ripple">分类3</li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+      </div>
+  
+      <!-- MDUI JavaScript -->
+      <script src="//cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
+      <script src="//cdn.bootcss.com/mdui/0.4.3/js/mdui.min.js"></script>
+  
 
-    <!-- MDUI JavaScript -->
-    <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
-{:site.page_list}
