--- a/template/header.html
+++ b/template/header.html
@@ -24,3 +24,4 @@
 <input id="search" class="mdui-textfield-input" type="text" autocomplete="new-password" onkeydown="search(event)" />
 </div>
 <div class="mdui-divider"></div>
+</div>
