--- a/template/summary.html
+++ b/template/summary.html
@@ -5,5 +5,6 @@
 </div>
 <div class="mdui-card-content mdui-typo">{:summary.summary}</div>
 <div class="mdui-card-actions">
+</div>
 <a class="mdui-btn mdui-ripple mdui-text-color-theme-accent" href="{:summary.link}">继续阅读</a>
 </div>
